[fix] use materialize css inputs and set defaultValue to avoid cursor jump

--- a/src/web/pcss/main.pcss
+++ b/src/web/pcss/main.pcss
@@ -261,6 +261,6 @@ app-drawer-layout:not([narrow]) .hide-when-wide {
 
 
 textarea.materialize-textarea{
-  min-height: 1rem;
-  padding-bottom: 0.5rem;
+  //min-height: 2em;
+  //padding-bottom: 0.5rem;
 }
